# Huntik-TCG-Remastered

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/Board/: Board.cpp  CMakeLists.txt
src/Card/: CMakeLists.txt  Card.cpp
src/Deck/: CMakeLists.txt
src/Hand/: CMakeLists.txt
src/Player/: CMakeLists.txt
src/demo/: CMakeLists.txt  main.cpp
src/include/: Board.h  Card.h  Deck.h  Hand.h  Player.h  definitions.h
tests/: CMakeLists.txt  tests_card.cpp
